fixed the index center align with vh

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 }
 #home-overlay {
   width:100%;
-  height:100%;
+  height:100vh;
   display:flex;
   align-items:center;
   min-height:300px;
